# typed_params

./: .gitignore  README.md  changelog.md  dev-requirements.txt  pyproject.toml  typed_params.py
git-hooks/: setup-hooks.py
tests/: test_params.py
tests/test_data/: mock_params.json
